#1299 Add 'bytesPerReducer' for hadoop index task